GG-38145 [GG-37896] Module java.base does not "opens java.security.cert" to unnamed module (#3000)